<resources>
    <string name="app_name">ReciclaAi</string>
    <string name="emailLogin">E-mail*</string>
    <string name="passwordLogin">Senha*</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="forgotPassword">Esqueceu a senha?</string>
    <string name="buttonlogin">Entrar</string>
    <string name="semCadastro">Ainda não sou cadastrado</string>
    <string name="name">Nome</string>
    <string name="name_local_coleta">Nome do local de coleta*</string>
    <string name="adress">Endereço</string>
    <string name="adressPC">Endereço*</string>
    <string name="number">Número</string>
    <string name="numberPC">Número*</string>
    <string name="complemento">Complemento</string>
    <string name="cep">CEP</string>
    <string name="cidade">Cidade</string>
    <string name="bairro">Bairro</string>
    <string name="estado">UF</string>
    <string name="cidadePC">Cidade*</string>
    <string name="bairroPC">Bairro*</string>
    <string name="estadoPC">UF*</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="fone">Fone</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="site">Site</string>
    <string name="realizacoleta">Realiza Coleta?</string>
    <string name="fig_point_localization">Ponto de localização em mapa</string>
    <string name="fig_person">Figura representando uma pessoa</string>
    <string name="tela_principal">Tela Principal</string>
    <string name="card_buscar_ponto_coleta">Buscar Ponto de Coleta</string>
    <string name="card_cadastrar_ponto_coleta">Cadastre um Ponto de Coleta</string>
    <string name="card_agendamento">Agendamento</string>
    <string name="card_notificacoes">Notificações</string>
    <string name="card_Ranking">Ranking</string>
    <string name="card_historico">Histórico</string>
    <string name="buttonPerguntasFrequentes">Respostas às Dúvidas Frequentes</string>
    <string name="buttonCadastroUser">Botão de acesso ao cadastro de usuários</string>
    <string name="buttomHome">Botão de atalho a tela principal</string>
    <string name="mapaIcon">Figura representando de ponto de mapa</string>
    <string name="mapaText">Localize um ponto de coleta</string>
    <string name="pontoColetaIcon">Figura representando um armazém de coleta </string>
    <string name="calendarIcon">Figura de calendário representando os agendamentos</string>
    <string name="notificacoesIcon">Figura de carta representando mensagem</string>
    <string name="rankingIcon">Figura de medalha representando um ranking de colocação</string>
    <string name="historicoIcon">Linhas representando escrita textual</string>
    <string name="card_buscarPonto">Buscar Ponto de Coleta</string>
    <string name="card_cadastraPonto">Cadastre um Ponto de Coleta</string>
    <string name="logo">Logotipo do aplicativo</string>
    <string name="tipo_de_material">Tipo de material coletado:</string>
    <string name="materiais_que_coleta">Materiais que o ponto aceita/coleta?</string>
    <string name="tipo_material_pilha">Pilhas/Baterias</string>
    <string name="tipo_material_oleocozinha">Óleo de cozinha</string>
    <string name="tipo_material_lampada">Lâmpadas</string>
    <string name="tipo_material_eletronico">Eletrônicos</string>
    <string name="btnPesquisar_pontocoleta">Pesquisar</string>
    <string name="filtrar_tipomaterial_consulta_pontocoleta">Buscar por tipo de material:</string>
    <string name="mostrar_somente_favoritos">Mostrar somente os pontos de coleta favoritos</string>
    <string name="pessoa_contato">Pessoa ou setor responsável</string>
    <string name="horário_funcionamento">Horário de funcionamento</string>


</resources>