<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <!-- Container for User Image and Location Icon -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <View
                    android:id="@+id/conteiner_usuario"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/conteiner_usuario"
                    android:layout_marginTop="16dp" />

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/ic_location_pontocoleta"
                    android:layout_marginTop="-95dp"
                    android:contentDescription="@string/fig_point_localization"/>
            </LinearLayout>

            <!-- EditText Fields -->
            <EditText
                android:id="@+id/editTextNamePontoColeta"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="30dp"
                android:hint="@string/name_local_coleta"
                android:inputType="text"
                android:background="@drawable/shape_edit_text"
                android:padding="8dp"/>

            <EditText
                android:id="@+id/editTextEmailPontoColeta"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:background="@drawable/shape_edit_text"
                android:padding="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/editTextFonePontoColeta"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:hint="@string/fone"
                    android:inputType="phone"
                    android:background="@drawable/shape_edit_text"
                    android:padding="8dp" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="match_parent"/>

                <EditText
                    android:id="@+id/editTextWhatsappPontoColeta"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:hint="@string/whatsapp"
                    android:inputType="text"
                    android:background="@drawable/shape_edit_text"
                    android:padding="8dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/editTextEnderecoPontoColeta"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:hint="@string/adressPC"
                android:inputType="text"
                android:background="@drawable/shape_edit_text"
                android:padding="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/editTextNroPontoColeta"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:hint="@string/numberPC"
                    android:inputType="text"
                    android:background="@drawable/shape_edit_text"
                    android:padding="8dp" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="match_parent"/>

                <EditText
                    android:id="@+id/editTextBairroPontoColeta"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="2"
                    android:hint="@string/bairroPC"
                    android:inputType="text"
                    android:background="@drawable/shape_edit_text"
                    android:padding="8dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/editTextComplementoPontoColeta"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:hint="@string/complemento"
                android:inputType="text"
                android:background="@drawable/shape_edit_text"
                android:padding="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/editTextCidadePontoColeta"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="2"
                    android:hint="@string/cidadePC"
                    android:inputType="text"
                    android:background="@drawable/shape_edit_text"
                    android:padding="8dp" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="match_parent"/>

                <EditText
                    android:id="@+id/editTextUFPontoColeta"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:hint="@string/estadoPC"
                    android:inputType="textCapCharacters"
                    android:background="@drawable/shape_edit_text"
                    android:padding="8dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/editTextSitePontoColeta"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:hint="@string/site"
                android:inputType="text"
                android:background="@drawable/shape_edit_text"
                android:padding="8dp"/>

            <CheckBox
                android:id="@+id/checkBoxRealizaColeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/realizacoleta" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonCadastrarPontoColeta"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_gravity="center"
                android:text="@string/cadastrar"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:background="@drawable/background_botao" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
