<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:contentDescription="@string/logo"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_recicla_ai"
                android:paddingTop="1dp"
                android:paddingBottom="1dp" />

            <EditText
                android:id="@+id/editTextEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/emailLogin"
                android:inputType="textEmailAddress"
                android:background="@drawable/shape_edit_text"
                android:padding="8dp"
                android:layout_marginTop="-10dp" />

            <EditText
                android:id="@+id/editTextPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:hint="@string/passwordLogin"
                android:inputType="textPassword"
                android:background="@drawable/shape_edit_text"
                android:padding="8dp" />

            <TextView
                android:id="@+id/textViewForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgotPassword"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/buttonlogin"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:background="@drawable/background_botao" />

            <TextView
                android:id="@+id/textViewRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/semCadastro"
                android:textColor="@android:color/black"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>